Build angular to redeploy

--- a/Bintangku.WebApi/wwwroot/index.html
+++ b/Bintangku.WebApi/wwwroot/index.html
@@ -5,7 +5,7 @@
     <title>Bintangku</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="assets/images/logo.png" />
     <link
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap"
       rel="stylesheet"
@@ -17,5 +17,5 @@
   <link rel="stylesheet" href="styles.23306d5fc48d42f91267.css"></head>
   <body class="mat-typography">
     <app-root></app-root>
-  <script src="runtime.acf0dec4155e77772545.js" defer></script><script src="polyfills.939905d55339054d2452.js" defer></script><script src="styles.d78b785f72ab12746503.js" defer></script><script src="main.211a1f60f659e24c93d2.js" defer></script></body>
+  <script src="runtime.acf0dec4155e77772545.js" defer></script><script src="polyfills.939905d55339054d2452.js" defer></script><script src="styles.d78b785f72ab12746503.js" defer></script><script src="main.6869ac0a32dacee43612.js" defer></script></body>
 </html>
